Log not found equipment (#98)
Signed-off-by: Seddik Yengui <seddik.yengui@rte-france.com>