@@ -9,8 +9,10 @@ package org.gridsuite.securityanalysis.server.service;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.google.common.collect.Sets;
 import com.powsybl.commons.PowsyblException;
+import com.powsybl.commons.reporter.Report;
 import com.powsybl.commons.reporter.Reporter;
 import com.powsybl.commons.reporter.ReporterModel;
+import com.powsybl.commons.reporter.TypedValue;
 import com.powsybl.contingency.Contingency;
 import com.powsybl.iidm.network.Network;
 import com.powsybl.iidm.network.VariantManagerConstants;
@@ -23,6 +25,7 @@ import com.powsybl.security.SecurityAnalysisReport;
 import com.powsybl.security.SecurityAnalysisResult;
 import com.powsybl.security.detectors.DefaultLimitViolationDetector;
 import com.powsybl.ws.commons.LogUtils;
+import org.gridsuite.securityanalysis.server.dto.ContingencyInfos;
 import org.gridsuite.securityanalysis.server.dto.SecurityAnalysisStatus;
 import org.gridsuite.securityanalysis.server.util.SecurityAnalysisRunnerSupplier;
 import org.slf4j.Logger;
@@ -31,8 +34,10 @@ import org.springframework.context.annotation.Bean;
 import org.springframework.http.HttpStatus;
 import org.springframework.messaging.Message;
 import org.springframework.stereotype.Service;
+import org.springframework.util.CollectionUtils;
 import org.springframework.web.server.ResponseStatusException;
 
+import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
@@ -186,15 +191,16 @@ public class SecurityAnalysisWorkerService {
 
         Network network = getNetwork(context.getNetworkUuid());
 
-        List<Contingency> contingencies = context.getContingencyListNames().stream()
-            .map(contingencyListName -> actionsService.getContingencyList(contingencyListName, context.getNetworkUuid(), context.getVariantId()))
-            .flatMap(List::stream)
-            .collect(Collectors.toList());
+        List<ContingencyInfos> contingencies = context.getContingencyListNames().stream()
+                .map(contingencyListName -> actionsService.getContingencyList(contingencyListName, context.getNetworkUuid(), context.getVariantId()))
+                .flatMap(List::stream)
+                .toList();
 
         SecurityAnalysis.Runner securityAnalysisRunner = securityAnalysisFactorySupplier.apply(context.getProvider());
 
         Reporter rootReporter = Reporter.NO_OP;
         Reporter reporter = Reporter.NO_OP;
+
         if (context.getReportUuid() != null) {
             final String reportType = context.getReportType();
             String rootReporterId = context.getReporterId() == null ? reportType : context.getReporterId() + "@" + reportType;
@@ -204,12 +210,34 @@ public class SecurityAnalysisWorkerService {
             reportService.deleteReport(context.getReportUuid(), reportType);
         }
 
-        CompletableFuture<SecurityAnalysisResult> future = runASAsync(context, securityAnalysisRunner, network, contingencies, reporter, resultUuid);
+        CompletableFuture<SecurityAnalysisResult> future = runASAsync(context,
+                securityAnalysisRunner,
+                network,
+                contingencies.stream()
+                        .map(ContingencyInfos::getContingency)
+                        .filter(Objects::nonNull)
+                        .toList(),
+                reporter,
+                resultUuid);
 
         SecurityAnalysisResult result = future == null ? null : future.get();
         if (context.getReportUuid() != null) {
-            Reporter finalRootReporter = rootReporter;
-            reportService.sendReport(context.getReportUuid(), finalRootReporter);
+            List<Report> notFoundElementReports = new ArrayList<>();
+            contingencies.stream()
+                    .filter(contingencyInfos -> !CollectionUtils.isEmpty(contingencyInfos.getNotFoundElements()))
+                    .forEach(contingencyInfos -> {
+                        String elementsIds = String.join(", ", contingencyInfos.getNotFoundElements());
+                        notFoundElementReports.add(Report.builder()
+                                .withKey("contingencyElementNotFound_" + contingencyInfos.getId() + notFoundElementReports.size())
+                                .withDefaultMessage(String.format("Cannot find the following equipments %s in contingency %s", elementsIds, contingencyInfos.getId()))
+                                .withSeverity(TypedValue.WARN_SEVERITY)
+                                .build());
+                    });
+            if (!CollectionUtils.isEmpty(notFoundElementReports)) {
+                Reporter elementNotFoundSubReporter = reporter.createSubReporter(context.getReportUuid().toString() + "notFoundElements", "Elements not found");
+                notFoundElementReports.forEach(elementNotFoundSubReporter::report);
+            }
+            reportService.sendReport(context.getReportUuid(), rootReporter);
         }
         return result;
     }
